[tool.poetry]
name = "radiobothrvatska"
version = "0.2.0"
description = "Jednostavni Discord bot koji sadrži većinu hrvatskih radio stanica."
authors = ["Patrik Horvatić <patrik.horva90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
prettytable = "^2.1.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
